fix: remove checkbox & radio redundant spacing

--- a/assets/stylesheet/forms.scss
+++ b/assets/stylesheet/forms.scss
@@ -100,6 +100,7 @@
 
   &__radio {
     opacity: 0;
+    position: absolute;
 
     &:focus + .form-control__radio-label::before {
       box-shadow: 0 0 0 1px $color-link;
@@ -267,6 +268,7 @@
   }
 
   &__checkbox {
+    position: absolute;
     opacity: 0;
 
     &:hover + .form-control__checkbox-label::before {
